# smart-assistant

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  Makefile  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  main.py  pyproject.toml
backend/app/: __init__.py
backend/app/backgroundjobs/: __init__.py  celery_app.py  timer_tasks.py
backend/app/core/: __init__.py  config.py  database.py  deps.py
backend/app/middleware/: __init__.py  logging.py
backend/app/models/: __init__.py  calendar.py  email_log.py  note.py  notification.py  reminder.py  task.py  timer.py  user.py
backend/app/routes/: __init__.py  auth.py  calculator.py  calendar.py  chat.py  email.py  health.py  note.py  search.py  task.py  timer.py
backend/app/schemas/: __init__.py  calculator.py  calendar.py  chat.py  email.py  email_draft.py  note.py  reminder.py  response.py  search.py  task.py  timer.py
backend/app/services/: auth.py  calculator.py  calendar.py  email.py  groq.py  llm.py  note.py  search.py  task.py  timer.py  tool_executor.py  workersai.py
backend/app/utils/: auth.py  celery_starter.py  prompts.py  tools.py
backend/app/websockets/: __init__.py  manager.py  notifications.py
backend/migrations/: alembic.ini  env.py
backend/migrations/versions/: 18584d4b52a4_add_user_id_to_tables.py  199ec36cfcab_initial_schema.py  62296d8c69dc_add_timers_table.py  b791f3badeb4_add_notifications_table.py  d83586eab1be_add_user_authentication.py  f8054dadefb2_add_tasks_table.py
backend/tests/: conftest.py  test_auth.py  test_calculator.py  test_calendar.py  test_multi_user.py  test_note.py  test_search.py  test_timer.py
frontend/: generate-icons.js  index.html  package-lock.json  package.json
frontend/public/: manifest.json  sw.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: MobileSidebar.tsx  ProtectedRoute.tsx
frontend/src/components/chat/: ChatContainer.tsx  ChatInput.tsx  ChatMessage.tsx  ChatTemplates.tsx  TypingIndicator.tsx  index.ts
frontend/src/components/common/: InstallPrompt.tsx
frontend/src/contexts/: ThemeContext.tsx
frontend/src/hooks/: index.ts  useAuth.ts  useCalendar.ts  useChat.ts  useKeyboardShortcuts.ts  useNotes.ts  useNotifications.ts  useOverview.ts  useTasks.ts  useTimers.ts
frontend/src/pages/: Contact.tsx  NotFound.tsx
frontend/src/services/: api.ts  indexeddb.ts  websocket.ts
frontend/src/stores/: authStore.ts
frontend/src/styles/: animations.css
frontend/src/types/: api.ts  auth.ts  calendar.ts  chat.ts  index.ts  note.ts  notification.ts  task.ts  timer.ts
frontend/src/utils/: constants.ts  sound.ts
(+41 files in other folders)
