[project]
name = "smart-assistant"
version = "0.1.0"
description = "AI-powered personal assistant with natural language processing"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "python-dateutil>=2.9.0",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.12.0",
    "resend>=2.4.0",
    "python-dotenv>=1.0.0",
    "migrator-cli>=0.1.0",
    "email-validator>=2.3.0",
    "groq>=0.36.0",
]

[tool.pydantic]
use_enum_values = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"
